--- a/language/en-GB/en-GB.mod_twbirthdays.ini
+++ b/language/en-GB/en-GB.mod_twbirthdays.ini
@@ -1,4 +1,4 @@
-; Language file for mod_twbirthdays
+; Language file for mod_thisweeksbirthdays
 ; Author: Pierre Veelen
 ; Copyright (C) 2015 Pierre Veelen. All rights reserved.
 ; License: GNU General Public License version 2 or later.
@@ -6,28 +6,28 @@
 ; Text as shown in module settings in back-end
 ;
 
-MOD_TWBIRTHDAYS="This Weeks Birthdays" 
-MOD_TWBIRTHDAYS_XML_DESCRIPTION="<p><b><big>This weeks birthdays</big></b><br/>
+MOD_THISWEEKSBIRTHDAYS="This Weeks Birthdays" 
+MOD_THISWEEKSBIRTHDAYS_XML_DESCRIPTION="<p><b><big>This weeks birthdays</big></b><br/>
 This module shows the active members who's birthday is in the current week.<br/>Author: Pierre Veelen.<br/>
 <p><a href='http://www.pvln.nl/' target='_blank' title='Joomla Enthousiast Posterholt, Nederland'></a><br/>
 <b><big>My Installed Extensions</big></b><br/>
 This module shows the active members who's birthday is in the current week.<br/>
 Author: Pierre Veelen, <a href='http://www.pvln.nl/' target='_blank'>www.pvln.nl</a>.<br/>
 Documentation: <a href='http://www.pvln.nl/this-weeks-birthdays' target='_blank'>http://www.pvln.nl/this-weeks-birthdays</a><br/>
-Code & bug reports: <a href='https://github.com/pierre-pvln/mod_twbirthdays' target='_blank'>https://github.com/pierre-pvln/mod_twbirthdays</a><br/>
+Code & bug reports: <a href='https://github.com/pierre-pvln/mod_thisweeksbirthdays' target='_blank'>https://github.com/pierre-pvln/mod_thisweeksbirthdays</a><br/>
 </p>
 This module shows the active members who's birthday is in the current week."
 
 ; Text for settings of module in the back-end 
-MOD_TWBIRTHDAYS_CLASS_SUFFIX="Class settings for module"
-MOD_TWBIRTHDAYS_PRETEXT="Text before module"
-MOD_TWBIRTHDAYS_POSTTEXT="Text after module"
-MOD_TWBIRTHDAYS_LISTTYPE="Select the way to show the birthdays"
-MOD_TWBIRTHDAYS_TICKERSPEED="Speed of the ticker text.<br/> Default value is 5. 
+MOD_THISWEEKSBIRTHDAYS_CLASS_SUFFIX="Class settings for module"
+MOD_THISWEEKSBIRTHDAYS_PRETEXT="Text before module"
+MOD_THISWEEKSBIRTHDAYS_POSTTEXT="Text after module"
+MOD_THISWEEKSBIRTHDAYS_LISTTYPE="Select the way to show the birthdays"
+MOD_THISWEEKSBIRTHDAYS_TICKERSPEED="Speed of the ticker text.<br/> Default value is 5. 
 Higher value is faster.<br/>
 Lower value is slower.<br/>
 Value 0 doesn't show the ticker."
 
 ; Text shown in module on webpage
-MOD_TWBIRTHDAYS_CONGRATS="Happy birthday to you !"
-MOD_TWBIRTHDAYS_NO_BIRTHDAYS="No birthdays this week"
+MOD_THISWEEKSBIRTHDAYS_CONGRATS="Happy birthday to you !"
+MOD_THISWEEKSBIRTHDAYS_NO_BIRTHDAYS="No birthdays this week"
