--- a/language/nl-NL/nl-NL.mod_twbirthdays.ini
+++ b/language/nl-NL/nl-NL.mod_twbirthdays.ini
@@ -1,4 +1,4 @@
-; Language file for mod_twbirthdays
+; Language file for mod_thisweeksbirthdays
 ; Author: Pierre Veelen
 ; Copyright (C) 2015 Pierre Veelen. All rights reserved.
 ; License: GNU General Public License version 2 or later.
@@ -6,28 +6,28 @@
 ; Text as shown in module settings in back-end
 ;
 
-MOD_TWBIRTHDAYS="Verjaardagen deze week" 
-MOD_TWBIRTHDAYS_XML_DESCRIPTION="<p><b><big>Verjaardagen deze week</big></b><br/>
+MOD_THISWEEKSBIRTHDAYS="Verjaardagen deze week" 
+MOD_THISWEEKSBIRTHDAYS_XML_DESCRIPTION="<p><b><big>Verjaardagen deze week</big></b><br/>
 Deze module toont alle actieve leden die deze week jarig zijn.<br/>Auteur: Pierre Veelen.<br/>
 <p><a href='http://www.pvln.nl/' target='_blank' title='Joomla Enthousiasteling Posterholt, Nederland'></a><br/>
 <b><big>Verjaardagen deze week</big></b><br/>
 Deze module toont alle actieve leden die deze week jarig zijn.<br/>
 Auteur: Pierre Veelen, <a href='http://www.pvln.nl/' target='_blank'>www.pvln.nl</a>.<br/>
 Documentatie: <a href='http://www.pvln.nl/this-weeks-birthdays' target='_blank'>http://www.pvln.nl/this-weeks-birthdays</a><br/>
-Code & bug reports: <a href='https://github.com/pierre-pvln/mod_twbirthdays' target='_blank'>https://github.com/pierre-pvln/mod_twbirthdays</a><br/>
+Code & bug reports: <a href='https://github.com/pierre-pvln/mod_thisweeksbirthdays' target='_blank'>https://github.com/pierre-pvln/mod_thisweeksbirthdays</a><br/>
 </p>
 Deze module toont alle actieve leden die deze week jarig zijn."
 
 ; Tekst bij de instellingen van de module in de back-end 
-MOD_TWBIRTHDAYS_CLASS_SUFFIX="Class instelling voor de module"
-MOD_TWBIRTHDAYS_PRETEXT="Tekst die getoond wordt voor de module"
-MOD_TWBIRTHDAYS_POSTTEXT="Tekst die getoond wordt na de module"
-MOD_TWBIRTHDAYS_LISTTYPE="Kies de manier om de verjaardagen te tonen"
-MOD_TWBIRTHDAYS_TICKERSPEED="Snelheid van de ticker tekst.<br/> Standaard waarde is 5. 
+MOD_THISWEEKSBIRTHDAYS_CLASS_SUFFIX="Class instelling voor de module"
+MOD_THISWEEKSBIRTHDAYS_PRETEXT="Tekst die getoond wordt voor de module"
+MOD_THISWEEKSBIRTHDAYS_POSTTEXT="Tekst die getoond wordt na de module"
+MOD_THISWEEKSBIRTHDAYS_LISTTYPE="Kies de manier om de verjaardagen te tonen"
+MOD_THISWEEKSBIRTHDAYS_TICKERSPEED="Snelheid van de ticker tekst.<br/> Standaard waarde is 5. 
 Hogere waarde is sneller.<br/>
 Lagere waarde is langzamer.<br/>
 Waarde 0 laat geen ticker zien."
 
 ; Tekst op de website bij deze module
-MOD_TWBIRTHDAYS_CONGRATS="Van harte gefelicteerd !"
-MOD_TWBIRTHDAYS_NO_BIRTHDAYS="Geen verjaardagen deze week"
+MOD_THISWEEKSBIRTHDAYS_CONGRATS="Van harte gefelicteerd !"
+MOD_THISWEEKSBIRTHDAYS_NO_BIRTHDAYS="Geen verjaardagen deze week"
