--- a/language/en-GB/en-GB.mod_thisweeksbirthdays.ini
+++ b/language/en-GB/en-GB.mod_thisweeksbirthdays.ini
@@ -6,27 +6,24 @@
 ; Text as shown in module settings in back-end
 ;
 
-MOD_THISWEEKSBIRTHDAYS="This Weeks Birthdays" 
+; Text as shown on administrator module panel detail settings for this module
+MOD_THISWEEKSBIRTHDAYS_XML_NAME="This Weeks Birthdays 2" 
 MOD_THISWEEKSBIRTHDAYS_XML_DESCRIPTION="<p><b><big>This weeks birthdays</big></b><br/>
 This module shows the active members who's birthday is in the current week.<br/>Author: Pierre Veelen.<br/>
-<p><a href='http://www.pvln.nl/' target='_blank' title='Joomla Enthousiast Posterholt, Nederland'></a><br/>
+<p><a href='https://www.pvln.nl/' target='_blank' title='Joomla Enthousiast Posterholt, Nederland'></a><br/>
 <b><big>My Installed Extensions</big></b><br/>
 This module shows the active members who's birthday is in the current week.<br/>
-Author: Pierre Veelen, <a href='http://www.pvln.nl/' target='_blank'>www.pvln.nl</a>.<br/>
-Documentation: <a href='http://www.pvln.nl/this-weeks-birthdays' target='_blank'>http://www.pvln.nl/this-weeks-birthdays</a><br/>
+Author: Pierre Veelen, <a href='https://www.pvln.nl/' target='_blank'>https://www.pvln.nl</a>.<br/>
+Documentation: <a href='https://www.pvln.nl/this-weeks-birthdays' target='_blank'>https://www.pvln.nl/this-weeks-birthdays</a><br/>
 Code & bug reports: <a href='https://github.com/pierre-pvln/mod_thisweeksbirthdays' target='_blank'>https://github.com/pierre-pvln/mod_thisweeksbirthdays</a><br/>
-</p>
-This module shows the active members who's birthday is in the current week."
+</p>This module shows the active members who's birthday is in the current week."
 
 ; Text for settings of module in the back-end 
 MOD_THISWEEKSBIRTHDAYS_CLASS_SUFFIX="Class settings for module"
 MOD_THISWEEKSBIRTHDAYS_PRETEXT="Text before module"
 MOD_THISWEEKSBIRTHDAYS_POSTTEXT="Text after module"
 MOD_THISWEEKSBIRTHDAYS_LISTTYPE="Select the way to show the birthdays"
-MOD_THISWEEKSBIRTHDAYS_TICKERSPEED="Speed of the ticker text.<br/> Default value is 5. 
-Higher value is faster.<br/>
-Lower value is slower.<br/>
-Value 0 doesn't show the ticker."
+MOD_THISWEEKSBIRTHDAYS_TICKERSPEED="Speed of the ticker text.<br/> Default value is 5.Higher value is faster.<br/>Lower value is slower.<br/>Value 0 doesn't show the ticker."
 
 ; Text shown in module on webpage
 MOD_THISWEEKSBIRTHDAYS_CONGRATS="Happy birthday to you !"
